@@ -2,7 +2,7 @@
 *                                                                      *
 *               This software is part of the ast package               *
 *          Copyright (c) 1982-2011 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2022 Contributors to ksh 93u+m           *
+*          Copyright (c) 2020-2023 Contributors to ksh 93u+m           *
 *                      and is licensed under the                       *
 *                 Eclipse Public License, Version 2.0                  *
 *                                                                      *
@@ -42,7 +42,6 @@ static	int		scantree(Dt_t*,const char*, struct argnod**);
 
 /*
  * This routine builds a list of files that match a given pathname
- * Uses external routine strgrpmatch() to match each component
  * A leading . must match explicitly
  */
 
