@@ -2,7 +2,7 @@
 *                                                                      *
 *               This software is part of the ast package               *
 *          Copyright (c) 1985-2012 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2022 Contributors to ksh 93u+m           *
+*          Copyright (c) 2020-2023 Contributors to ksh 93u+m           *
 *                      and is licensed under the                       *
 *                 Eclipse Public License, Version 2.0                  *
 *                                                                      *
@@ -198,5 +198,5 @@ strsubmatch(const char* s, const char* p, int flags)
 int
 strgrpmatch(const char* b, const char* p, ssize_t* sub, int n, int flags)
 {
-	return strngrpmatch(b, b ? strlen(b) : 0, p, sub, n, flags|STR_INT);
+	return strngrpmatch(b, b ? strlen(b) : 0, p, sub, n, flags);
 }
